--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,9 @@
 <head>
-<style type<link
-rel="stylesheet"
-href="./css/styles.css"
-/>="text/css>"
+  <link
+    rel="stylesheet"
+    href="./css/styles.css"
+/>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>All About Me!</title>
 </head>
