--- a/css/styles.css
+++ b/css/styles.css
@@ -25,7 +25,7 @@ div {
  }
 img {
   width: 300px;
-  border: 15px solid black;
+  border: 15px solid rgb(112, 18, 18);
   border-radius: 15px 50px 800px 5px;
   box-shadow: 10px 10px 10px #999;
 }
